src/index.scss
/* ... */
.clickable {
    cursor: pointer;
}

.sort-dialog {
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
    position: absolute;
    outline: currentcolor none medium;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 2px 5px 0px, rgba(0, 0, 0, 0.12) 0px 2px 10px 0px;
    z-index: 200;
    min-width: 165px;
    background-color: white;
    text-align: left;
    right: 0px;
    border-radius: 5px;
    top: 100%;
    margin-top: 5px;
    white-space: nowrap;
    overflow-y: scroll;
    max-height: calc(100vh - 427.25px);
}

.sort-dialog .sort-dialog-option:hover{
    background-color: rgb(245, 245, 245);
}

.sort-dialog-option-wrapper {
    display: flex;
    flex-direction: row;
    box-sizing: border-box;
    position: relative;
    outline: currentcolor none medium;
    border-right: 2px solid rgba(0, 0, 0, 0);
}
.sort-dialog-option-wrapper:hover {
    background-color: rgb(245, 245, 245);
    border-right: 2px solid rgb(23, 132, 172);
}
.sort-dialog-option-wrapper input:hover {
    cursor: pointer;
}

.sort-dialog-options {
    box-sizing: border-box;
    position: relative;
    outline: currentcolor none medium;
    flex: 1 1 auto;
    padding: 0.3rem 0.6rem;
}

.sort-dialog-options input {
    margin-right: 5px;
}

.sort-dialog-radio-wrapper {
    display: flex;
    flex-direction: row;
    box-sizing: border-box;
    position: relative;
    outline: currentcolor none medium;
    padding: 0.3rem 0.6rem;
}

.sort-dialog-radio-wrapper span {
    padding-right: 2px;
}
.sort-dialog-radio-wrapper svg {
    padding-right: 2px;
}
.card-footer {
    
}
.card-footer .d-inline-block {
    display: none !important;
}

.pagination-size-wrapper {
    z-index: 10;
    position: relative;
    top: -70px;
    width: fit-content;
    margin: 1rem;
    font-size: 13px;
}

.pagination-size-wrapper #mui-component-select-filter-field {
    font-size: 13px;
}

.pagination {
    z-index: 999;
    font-size: 13px;
    margin-left: auto !important;
}


.fake-link {
    color: rgb(0, 91, 124);
    cursor:pointer;
}
.fake-link:hover {
    text-decoration: underline;
}

.column-arrage-dialog .column-filter-wrapper {
    background-color: #dedede;
}
.column-arrage-dialog .column-filter-wrapper i {
    padding: 0px 5px 5px 5px;    
}

.sui-facet__title {
    color: black !important;
    font-weight: bold !important;
}
.sui-multi-checkbox-facet__option-input-wrapper {
    padding-left: 23px;
    text-indent: -23px; 
}

.image-type-cell {
    white-space: nowrap;
    text-overflow: ellipsis;
    display: block;
    overflow: hidden
}

// Utility Classes
.u-gutter-fix {
	margin: 0px !important;
}
.u-transition {
    transition: all 0.5s ease 0s;
}

.u-controlled-access-asterisk {
    color: red;
    font-size: 18px
}
.download-btn {
    -moz-box-align: center;
    -moz-box-pack: center;
    // display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    cursor: pointer;
    padding: 3px 5px;
    font-size: 14px;
    border-radius: 4px;
    border: 1px solid rgb(200, 200, 200);
    background-color: rgb(40, 60, 94);
    color: white;
    outline: none;
    transition: all 0.25s ease 0s;
    height: 22px;
}
.download-btn:hover {
    background-color: rgb(67, 100, 157);
    color: white;
}
.modal-backdrop {
    display: block;
    background-color: rgba(0, 0, 0, 0.0);
    z-index: 100;
}

#empty-space-wrapper{
    display: flex;
    flex-direction: row;
    box-sizing: border-box;
    justify-content: space-between;
    padding: 0px 0px 2rem;
}

#empty-space{
    display: flex;
    flex-direction: row;
    box-sizing: border-box;
    position: relative;
    outline: none;
}

#tooltip{
    z-index: 9999;
}

.accordion{
    --bs-accordion-border-color: #dee2e6;
}

.accordion-button{
  height: .25rem !important;
  font-size: .8125rem !important;
  --bs-accordion-body-padding-y: .5rem !important;
  font-weight: 500;
}

.accordion-item:first-of-type(.collapsed) .accordion-button {
    --bs-accordion-color: $accordion-button-color
    --bs-accorion-border-color: $accordion-button-color
    box-shadow: inset 0 -1px 0 rgba(0,0,0,.125);
}

.accordion-button:not(.collapsed)::after {
    background-color: #e7f1ff;
    --bs-accordion-btn-color: $accordion-button-color;
    --bs-accordion-active-color: $accordion-button-active-color;
}


.accordion-body {
    padding: 0.5rem;
}

.inner-accordion .accordion-button:not(.collapsed) {
    background-color: #ffffff;
}

.inner-accordion .accordion-button:not(.collapsed)::after {
    background-color: #ffffff;
}

.inner-accordion .accordion-button::after {
    margin: 0px 10px;
}

.action-button {
    background-color: rgb(67, 100, 157);
    color: white;
}
.action-button:hover {
    color: white;
    text-decoration: none;
}

#spatial-filter{
    padding:1rem;
}

.col-xl-3{
    height: calc(100vh - #{$header-height-padded + $footer-height-padded}) !important;
    overflow-y: hidden;
}

.flex-column{
    flex-direction: column !important;
}

.row-height{
    height: 28px !important;
}

#release{
    padding-left: 2rem;
    padding-right: 2rem;
}


@media only screen and (min-width: 1200px) {
    #footer {
        margin-top: auto;
        position: fixed;
        bottom: 0px;
    }
}

.height-wrapper {
    min-height: calc(100vh + 16px
        - #{$header-height-padded}
        - #{$footer-height-padded});
}

.report-header {
    margin: 5px 0px;
    font-weight: bold;
    font-size: 16px;
}

.report-card {
    padding-bottom: $footer-height-padded;
}

@media only screen and (max-width: 991px) {
    .report-card {
        padding-bottom: 150.5px;
    }
}

.tab-pane {
    cursor: pointer;
    color: #495057;
    font-size: 14px;
}

.tab-pane:hover, .tab-pane.active {
    text-decoration: none;
    color: black !important;
}

.report-spinner {
    height: 5rem;
    width: 5rem;
    font-size: 20px;
    color: #283c5e;
}
/* ... */

